[BE] 인기 해시태그 계산 로직 개선 (#613)
* refactor: BaseTimeEntity 분리

* feat: BottariTemplateHashtag 클래스에 BaseTimeEntity 상속 추가

* refactor: 해시태그 서비스 로직 개선

* fix: 컨벤션 수정